assets/css/stylesheet.css
/* ... */
.opaque {
    opacity: 0.7;
}

.hidden {
    visibility: hidden;
}

.visible {
    visibility: visible;
}

/*______________________________ Body __________________________________*/

body {
    width: 100%;
    min-height: 100%;
    height: fit-content;
    margin: 0;
    padding: 0;
    border: 0;
    display: flex;
    flex-direction: column;
}

.pre-load {
    overflow: hidden;
}

#background {
    background-image: url('/assets/images/lance/lance-ocean-centered-1-blurred.webp');
    background-position: center center;
    background-size: cover;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    z-index: -1000;
}

#loading-wrapper {
    z-index: 5;
    position: fixed;
    width: 100%;
    height: 100%;
    overflow: hidden;
    background-color: black;
}

.loaded-wrapper {
    visibility: hidden;
    opacity: 0;
    -webkit-transition: all 2s ease-out;
    transition: all 2s ease-out;
}

#loader {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    width: 100%;
}

#loading-logo {
    height: 15vh;
    width: fit-content;
    filter: var(--white-filter);
    transition: filter 0.25s;
}

/*______________________________ Header __________________________________*/
#header{
    z-index: 5;
    position: fixed;
    width: 100%;
    color: var(--header-text-color);
    opacity: var(--opacity);
    background-color: var(--header-background-color);
}

.header-top {
    z-index: 5;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    width: 100%;
    height: var(--header-height);
    border: 0;
    transition: all 0.25s;
}

.top {
    --header-background-color: transparent;
    --header-text-color: var(--black);
    --header-text-hover: var(--dark-grey);
    --header-logo-color: var(--black-filter);
    --header-logo-hover: var(--dark-grey-filter);
    --social-links-color: var(--black-filter);
    --tidal-filter: var(--offwhite-filter);
    --nav-button-width: 0.15rem;
    --nav-button-height: 100%;
    --opacity: 1;
}

.scrolled {
    --header-text-color: var(--black);
    --header-text-hover: var(--dark-grey);
    --header-logo-color: var(--black-filter);
    --header-logo-hover: var(--dark-grey-filter);
    --social-links-color: var(--dark-grey-filter);
    --tidal-filter: var(--offwhite-filter);
    --nav-button-width: 0.12rem;
    --nav-button-height: 80%;
    --opacity: 0.7;
}

.mobile {
    --nav-menu-link-padding: 0 2.25% 0.25% 2.25%;
    --nav-menu-font-size: 1.4vmax;
    --featured-header-size: 5vmax;
    --content-width: 80%;
    --album-image-width: 70%;
    --album-image-margin: 15%;
    --video-container-width: 80%;
    --background-size: auto 100%;
    --featured-container-top-margin: 15%;
    --form-font-size: 2vmax;
    --mailing-form-header-margin-bottom: 2.5%;
    --mailing-list-padding-bottom: 5%;
    --mailing-form-header-font-size: 3.25vmax;
    --calendar-width: 80vw;
    --calendar-data-header-font-size: 2vmax;
    --calendar-data-subheader-font-size: 1.4vmax;
    --calendar-tickets-font-size: 1.4vmax;
    --featured-show-top-padding: 25%;
}

.top-mobile {
    --header-height: 9.9vh;
    --header-logo-height: 9vh;
}

.scrolled-mobile {
    --header-height: 6.9vh;
    --header-logo-height: 6vh;
}

.desktop {
    --nav-menu-link-padding: 0% 5% 0.5% 5%;
    --nav-menu-font-size: 1vmax;
    --featured-header-size: 3vmax;
    --content-width: 80%;
    --album-image-width: 27.5%;
    --album-image-margin: 2.9166666667%;
    --video-container-width: 60%;
    --background-size: cover;
    --featured-container-top-margin: 5%;
    --form-font-size: 1.2vmax;
    --mailing-form-header-margin-bottom: 1.5%;
    --mailing-list-padding-bottom: 2%;
    --mailing-form-header-font-size: 2.5vmax;
    --calendar-width: 60vw;
    --calendar-data-header-font-size: 1.5vmax;
    --calendar-data-subheader-font-size: 0.9vmax;
    --calendar-tickets-font-size: 1.2vmax;
    --featured-show-top-padding: 5%;
}

.top-desktop {
    --header-height: 12.9vh;
    --header-logo-height: 12vh;
    --header-background-color: transparent;
}

.scrolled-desktop {
    --header-height: 8.9vh;
    --header-logo-height: 8vh; 
}

.nav-open-scrolled {
    --header-background-color: white;
}

/* ----------- Header Logo --------------------------*/
.header-logo {
    cursor: pointer;
    height: 100%;
    width: fit-content;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 5;
}

#logo {
    height: var(--header-logo-height);
    filter: var(--header-logo-color);
    transition: filter 0.25s, visibility 0.005s;
}

#logo:hover {
    filter: var(--header-logo-hover);
}

/* ----------- Navigation Drop-down Button --------------------------*/
.nav-button {
    z-index: 5;
    cursor: pointer;
    position: absolute;
    right: 0;
    margin-right: 2%;
    height: 30px;
    width: 40px;
    opacity: 1;
}

.nav-button::before, .nav-button::after {
    content: "";
    position: absolute;
    bottom: 0;
    width: var(--nav-button-width);
    height: var(--nav-button-height);
    transition: all 0.25s;
}

.nav-button::before {
    top: 3px;
    -webkit-transform: rotate(90deg);       
    -ms-transform: rotate(90deg);           
    transform: rotate(90deg);
    background-color: var(--header-text-color);
}

.nav-button::after {
    top: -3px;
    -webkit-transform: rotate(-90deg);       
    -ms-transform: rotate(-90deg);           
    transform: rotate(-90deg);   
    background-color: var(--header-text-color);
}

.open.nav-button::before {
    top: 0px;
    -webkit-transform: rotate(-45deg);       
    -ms-transform: rotate(-45deg);           
    transform: rotate(-45deg);
}

.open.nav-button::after {
    top: 0px;
    -webkit-transform: rotate(45deg);       
    -ms-transform: rotate(45deg);           
    transform: rotate(45deg);
}
/* ... */

